Restore a dragged window's transform to identity before changing its bounds.

We need to restore a dragged window's transform back to identify first and
then change its bounds, otherwise, if the window has a bubble, the bubble
won't get the correct bounds, as seen in the bug. The reason is
BubbleDialogDelegateView::SizeToContents() is only called to relayout the
bubble when its anchor widget window's bounds changed, and if the anchor
widget window has a non-identity transform in place when the function is
called, the bubble can't be relayout'ed correctly as GetAnchorBoundsInScreen()
takes the tranform into consideration.

To fix this, we always restore the transform first and then change its bounds.
We'll investigate if there is better way to fix it.

Bug: 879359
Change-Id: I5dd36082eb4fff8fdcdbde21e22b12393663df76
Reviewed-on: https://chromium-review.googlesource.com/1197788
Commit-Queue: Xiaoqian Dai <xdai@chromium.org>
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Cr-Commit-Position: refs/heads/master@{#589552}
Former-commit-id: 219bf06eadcfe2a882c6c6c16ef9f65d72339298