ash/wm/splitview/split_view_utils.h
@@ -54,8 +54,9 @@ enum SplitviewAnimationType {
   // Used to slide in the text labels.
   SPLITVIEW_ANIMATION_TEXT_SLIDE_IN,
   SPLITVIEW_ANIMATION_TEXT_SLIDE_OUT,
-  // Used to apply window transform on the selector item after it gets snapped.
-  SPLITVIEW_ANIMATION_RESTORE_OVERVIEW_WINDOW,
+  // Used to apply window transform on the selector item after it gets snapped
+  // or on the dragged window after the drag ends.
+  SPLITVIEW_ANIMATION_SET_WINDOW_TRANSFORM,
 };
 
 // Animates |layer|'s opacity based on |type|.
